--- a/.jshintrc
+++ b/.jshintrc
@@ -1,19 +1,11 @@
 {
-    "bitwise": true,
-    "camelcase": true,
-    "curly": true,
-    "eqeqeq": true,
-    "forin": true,
-    "immed": true,
-    "latedef": true,
-    "newcap": true,
-    "noarg": true,
-    "noempty": true,
-    "nonew": true,
-    "regexp": true,
-    "strict": true,
-    "trailing": true,
-    "undef": true,
-    "unused": true,
-    "node": true
+  "evil": true,
+  "regexdash": true,
+  "browser": true,
+  "wsh": true,
+  "trailing": true,
+  "sub": true,
+  "asi": true,
+  "lastsemic":true,
+  "esnext": true
 }
