--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "ternary-stream",
-  "description": "Fork stream based on passed condition, and collect down-stream",
-  "version": "2.0.0",
-  "homepage": "https://github.com/robrich/ternary-stream",
-  "repository": "git://github.com/robrich/ternary-stream.git",
-  "author": "Rob Richardson (http://robrich.org/)",
-  "main": "./index.js",
+  "name": "partition-stream",
+  "version": "0.0.1",
+  "description": "Partition stream into multpile streams by matching object stream properties with a set of ranges",
+  "main": "index.js",
+  "scripts": {
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/schabluk/partition-stream.git"
+  },
   "keywords": [
     "conditional",
     "if",
-    "ternary",
+    "parition",
     "stream"
   ],
-  "dependencies": {
-    "duplexify": "^3.4.2",
-    "fork-stream": "^0.0.4",
-    "merge-stream": "^1.0.0",
-    "through2": "^2.0.0"
-  },
-  "devDependencies": {
-    "jshint": "^2.8.0",
-    "mocha": "^2.3.3",
-    "should": "^7.1.0"
-  },
-  "scripts": {
-    "test": "mocha && jshint ."
-  },
+  "author": "Rob Richardson (http://robrich.org/)",
+  "contributors": [{
+    "name": "Lukasz Schabek",
+    "email": "lukasz.schabek@gmail.com"
+  }],
+  "license": "MIT",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "license": "MIT"
+  "dependencies": {
+    "duplexer2": "^0.1.4",
+    "multi-fork": "^0.0.2",
+    "merge-stream": "^1.0.0",
+    "through2": "^2.0.0"
+  }
 }
