--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "duplexer2": "^0.1.4",
+    "duplexify": "^3.4.2",
     "multi-fork": "^0.0.2",
     "merge-stream": "^1.0.0",
     "through2": "^2.0.0",
